main.css
ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
  }

a {    
    text-decoration: none;
    color: #5f6368;
}

#topbar {
    font-family: arial,sans-serif;
    display:inline-block;
    margin-top: 20px;
    margin-left: 20px;
    border-right-style: solid;
    border-right-width: 0px;
    padding-right: 10px;
}

.toptext {
    margin-right: 20px;
}

#mainlogo {
    padding-top:109px;
}

#search {
    margin-top: 60px;
}

#searchbuttons {
    padding-top: 18px
}

.googlesearch {
background-image: -moz-linear-gradient(top,#f5f5f5,#f1f1f1);
-moz-border-radius: 2px;
-moz-user-select: none;
background-color: #f2f2f2;
border: 1px solid #f2f2f2;
border-radius: 4px;
color: #5F6368;
cursor: pointer;
font-family: arial,sans-serif;
font-size: 14px;
margin: 11px 4px;
min-width: 54px;
padding: 0 16px;
text-align: center;
height: 36px;
line-height: 27px;
}

.ifl {
    background-image: -moz-linear-gradient(top,#f5f5f5,#f1f1f1);
-moz-border-radius: 2px;
-moz-user-select: none;
background-color: #f2f2f2;
border: 1px solid #f2f2f2;
border-radius: 4px;
color: #5F6368;
cursor: pointer;
font-family: arial,sans-serif;
font-size: 14px;
margin: 11px 4px;
min-width: 54px;
padding: 0 16px;
text-align: center;
height: 36px;
line-height: 27px;
}

#footer {
    font-family: arial,sans-serif;
    bottom: 0;
    margin-left: -8px;
    font-size: 11pt;
    position: absolute;
    width: 100%;
    background: #f2f2f2;
    border-top: 1px solid #e4e4e4;
    line-height: 35px;
    min-width: 980px;
}

.rightbottom {
    padding:10px;
    float: right;
    margin-right:30px;
}

.leftbottom {
    padding:10px;
    float: left;
    margin-left: 30px;
}

